@@ -6,7 +6,7 @@ _wajig()
     COMPREPLY=()
     cur=${COMP_WORDS[COMP_CWORD]}
 
-    options="-b --backup -d --dist -f --fast -h --help -n --noauth -P --pager \
+    options="-b --backup -d --dist -f --fast -h --help -n --noauth \
              -p --pause -q --quiet -s --simulate -t --teaching -v --verbose \
              -r --recommends -R --norecommends -y --yes -V --version"
 
